# appread

./: README.md  bun.lockb  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
assets/: logo.psd
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/api/: Api.ts
src/assets/style/: style.scss
src/assets/style/include/: app.scss  mixins.scss  reset.scss  rtl.scss  vars.scss
src/components/: CoverUp.vue  LoadingButton.vue  NoPagesTable.vue  SideBar.vue  SingleAction.vue
src/locale/: Locale.ts
src/locale/locales/: en.json  he.json
src/models/: Action.ts  Flow.ts  OAEndpoint.ts  Project.ts  Reader.ts  Server.ts  SingleLocale.ts  SingleRoute.ts  types.ts
src/models/readers/functions/: CreateExecution.ts  ListFunctions.ts
src/router/: index.ts
src/stores/: AppState.ts  State.ts
src/sub-views/: ActionForm.vue  ProjectForm.vue  RequestData.vue  ServerForm.vue
src/utils/: Alert.ts  Extender.ts  Helper.ts
src/views/: ActionsView.vue  FlowsView.vue  HomeView.vue  ProjectsView.vue  ServersView.vue  SettingsView.vue
tests/components/: cover-up.spec.ts
tests/unit/: api.test.ts  helper.test.ts
