[package]
name = "appread"
version = "0.0.1"
description = "Appwrite SDKs tester"
authors = ["BoolCode"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]


[profile.release.package.wry]
debug = true
debug-assertions = true
